[metadata]
license_file = LICENSE

[flake8]
extend-exclude = build,dist,deb_dist
extend-ignore = E201,E202,F403,F405
filename = *.py

[coverage:run]
source = mike-multi
parallel = True
branch = True

[coverage:paths]
source =
  mike-multi/
  /usr/local/lib/*/site-packages/mike-multi/

[coverage:report]
exclude_lines =
  pragma: no cover
  raise NotImplementedError
  return NotImplemented
  def __repr__
